Don't resolve GLSL extensions if no shaders

If the GL server is 1.x, but the client is 2.x, then the
qt_resolve_glsl_extensions() function was returning true
because the functions existed client-side, when it should
have returned false because the functionality didn't exist
server-side.

Task-number: QTBUG-12478
Reviewed-by: Sarah Smith